--- a/Finances_Avalonia/App.axaml
+++ b/Finances_Avalonia/App.axaml
@@ -1,5 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:Finances_Avalonia.Services"
              x:Class="Finances_Avalonia.App"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
@@ -7,4 +8,7 @@
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
+    <Application.DataTemplates>
+		<local:ViewLocator/>
+    </Application.DataTemplates>
 </Application>
