--- a/Finances_Avalonia/Views/Account/AccountView.axaml
+++ b/Finances_Avalonia/Views/Account/AccountView.axaml
@@ -2,11 +2,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="using:Finances_Avalonia.ViewModels.Account"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Finances_Avalonia.AccountView">
+             x:Class="Finances_Avalonia.Views.Account.AccountView">
+    <Design.DataContext>
+		<vm:AccountViewModel />
+    </Design.DataContext>
     <StackPanel>
 	    <TextBlock>Account View Model test is successful!</TextBlock>
-        <CheckBox IsChecked="{Binding Test}"></CheckBox>
+        <CheckBox IsChecked="{Binding Test}" />
     </StackPanel>
   
   
