--- a/Finances_Avalonia/App.axaml
+++ b/Finances_Avalonia/App.axaml
@@ -7,7 +7,20 @@
 
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="Styles/AppDefaultStyles.axaml">
+			
+        </StyleInclude>
     </Application.Styles>
+    <Application.Resources>
+		<SolidColorBrush x:Key="PrimaryForeground">#CFCFCF</SolidColorBrush>
+		<SolidColorBrush x:Key="PrimaryBackground">#012E0C</SolidColorBrush>
+        <LinearGradientBrush x:Key="PrimaryBackgroundGradient" StartPoint="0%, 0%" EndPoint="100%, 0%">
+			<GradientStop Offset="0" Color="#111214" />
+            <GradientStop Offset="1" Color="#014512" />
+        </LinearGradientBrush>
+		<SolidColorBrush x:Key="PrimaryHoverBackground">#333B5A</SolidColorBrush>
+		<SolidColorBrush x:Key="PrimaryHoverForeground">White</SolidColorBrush>
+    </Application.Resources>
     <Application.DataTemplates>
 		<local:ViewLocator/>
     </Application.DataTemplates>
