Switched icon images to SVG images. Started work on expand button for side menu bar.

--- a/Finances_Avalonia/Views/Account/AccountView.axaml
+++ b/Finances_Avalonia/Views/Account/AccountView.axaml
@@ -10,6 +10,7 @@
     </Design.DataContext>
     <StackPanel>
 	    <TextBlock>Account View Model test is successful!</TextBlock>
+        <CheckBox IsChecked="{Binding ShowInactive}">Show Inactive</CheckBox>
     </StackPanel>
   
   
