Added HomePage. MainView can now navigate to HomePage.

--- a/Finances_Avalonia/App.axaml
+++ b/Finances_Avalonia/App.axaml
@@ -20,6 +20,7 @@
         </LinearGradientBrush>
 		<SolidColorBrush x:Key="PrimaryHoverBackground">#333B5A</SolidColorBrush>
 		<SolidColorBrush x:Key="PrimaryHoverForeground">White</SolidColorBrush>
+		<SolidColorBrush x:Key="PrimaryActiveBackground">#018030</SolidColorBrush>
     </Application.Resources>
     <Application.DataTemplates>
 		<local:ViewLocator/>
