--- a/Finances_Avalonia/Views/MainWindow.axaml
+++ b/Finances_Avalonia/Views/MainWindow.axaml
@@ -42,6 +42,12 @@
                             <TextBlock Classes="IconButton" IsVisible="{Binding SideMenuExpanded}">Budgets</TextBlock>
                         </StackPanel>
                     </Button>
+	                <Button Command="{Binding GoOptions}" HorizontalAlignment="Stretch" Classes.active="{Binding OptionsPageIsActive}">
+					    <StackPanel Orientation="Horizontal">
+						    <Image Source="{SvgImage /Assets/Options.svg}" Width="30" />
+                            <TextBlock Classes="IconButton" IsVisible="{Binding SideMenuExpanded}">Options</TextBlock>
+                        </StackPanel>
+                    </Button>
                 </StackPanel>
                 <Button Grid.Row="1" Command="{Binding ExpandSideMenu}" HorizontalAlignment="Right" IsVisible="{Binding SideMenuExpanded}">
 				    <Image Source="{SvgImage /Assets/Left-Arrow.svg}"  />	
