Added OptionsRefreshCache command. OptionsView can now Refresh Cache, and events respond to when command is running.

--- a/Finances_Avalonia/Views/Options/OptionsView.axaml
+++ b/Finances_Avalonia/Views/Options/OptionsView.axaml
@@ -8,11 +8,12 @@
              x:Class="Finances_Avalonia.Views.Options.OptionsView">
   <StackPanel Spacing="15" Margin="15">
 	  <Label Content="Options" />
-      <Button>
+      <Button Command="{Binding RefreshCacheCommand}">
 		  <StackPanel Orientation="Horizontal">
 			  <Image Source="{SvgImage /Assets/Refresh.svg}" Width="30" />
               <TextBlock Classes="IconButton">Refresh Cache</TextBlock>
           </StackPanel>
       </Button>
+      <TextBlock IsVisible="{Binding IsExecuting}" >Executing...</TextBlock>
   </StackPanel>
 </UserControl>
