--- a/Finances_Avalonia/App.axaml
+++ b/Finances_Avalonia/App.axaml
@@ -19,13 +19,27 @@
         </ResourceDictionary>
 		<SolidColorBrush x:Key="PrimaryForeground">#CFCFCF</SolidColorBrush>
 		<SolidColorBrush x:Key="PrimaryBackground">#012E0C</SolidColorBrush>
+
         <LinearGradientBrush x:Key="PrimaryBackgroundGradient" StartPoint="0%, 0%" EndPoint="100%, 0%">
 			<GradientStop Offset="0" Color="#111214" />
             <GradientStop Offset="1" Color="#014512" />
         </LinearGradientBrush>
+        
+        <LinearGradientBrush x:Key="AlertButtonBackgroundGradient" StartPoint="0%, 0%" EndPoint="100%, 0%">
+			<GradientStop Offset="0" Color="#ffff00" />
+            <GradientStop Offset="1" Color="#ff8800" />
+        </LinearGradientBrush>
+
 		<SolidColorBrush x:Key="PrimaryHoverBackground">#333B5A</SolidColorBrush>
 		<SolidColorBrush x:Key="PrimaryHoverForeground">White</SolidColorBrush>
 		<SolidColorBrush x:Key="PrimaryActiveBackground">#018030</SolidColorBrush>
+        
+		<SolidColorBrush x:Key="OutlineButtonForeground">#00ffff</SolidColorBrush>
+
+        <LinearGradientBrush x:Key="PrimaryButtonBackgroundGradient" StartPoint="0%, 0%" EndPoint="100%, 0%">
+			<GradientStop Offset="0" Color="#03751F" />
+            <GradientStop Offset="1" Color="#ff00ff" />
+        </LinearGradientBrush>
     </Application.Resources>
     <Application.DataTemplates>
 		<local:ViewLocator/>
