--- a/Finances_Avalonia/Views/MainWindow.axaml
+++ b/Finances_Avalonia/Views/MainWindow.axaml
@@ -18,31 +18,31 @@
         <Border Grid.Column="0" Padding="20" Background="{DynamicResource PrimaryBackgroundGradient}">
             <Grid RowDefinitions="*, 30">
                 <StackPanel Grid.Row="0" HorizontalAlignment="Center" Spacing="12">
-                    <Button Command="{Binding GoHome}" HorizontalAlignment="Stretch" Classes.active="{Binding HomePageIsActive}">
+                    <Button Command="{Binding GoHome}" HorizontalAlignment="Stretch" Classes="subtle" Classes.active="{Binding HomePageIsActive}">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="{SvgImage /Assets/Home.svg}" Width="30" />
 						    <TextBlock Classes="IconButton" IsVisible="{Binding SideMenuExpanded}">Home</TextBlock>
                         </StackPanel>
                     </Button>
-	                <Button Command="{Binding GoAccounts}" HorizontalAlignment="Stretch" Classes.active="{Binding AccountPageIsActive}">
+	                <Button Command="{Binding GoAccounts}" HorizontalAlignment="Stretch" Classes="subtle" Classes.active="{Binding AccountPageIsActive}">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="{SvgImage /Assets/Account.svg}" Width="30" />
 						    <TextBlock Classes="IconButton" IsVisible="{Binding SideMenuExpanded}">Accounts</TextBlock>
                         </StackPanel>
                     </Button>
-	                <Button HorizontalAlignment="Stretch">
+	                <Button HorizontalAlignment="Stretch" Classes="subtle">
 					    <StackPanel Orientation="Horizontal">
 						    <Image Source="{SvgImage /Assets/Ledger.svg}" Width="30" />
                             <TextBlock Classes="IconButton" IsVisible="{Binding SideMenuExpanded}">Ledger</TextBlock>
                         </StackPanel>
                     </Button>
-	                <Button HorizontalAlignment="Stretch">
+	                <Button HorizontalAlignment="Stretch" Classes="subtle">
 					    <StackPanel Orientation="Horizontal">
 						    <Image Source="{SvgImage /Assets/Budget.svg}" Width="30" />
                             <TextBlock Classes="IconButton" IsVisible="{Binding SideMenuExpanded}">Budgets</TextBlock>
                         </StackPanel>
                     </Button>
-	                <Button Command="{Binding GoOptions}" HorizontalAlignment="Stretch" Classes.active="{Binding OptionsPageIsActive}">
+	                <Button Command="{Binding GoOptions}" HorizontalAlignment="Stretch" Classes="subtle" Classes.active="{Binding OptionsPageIsActive}">
 					    <StackPanel Orientation="Horizontal">
 						    <Image Source="{SvgImage /Assets/Options.svg}" Width="30" />
                             <TextBlock Classes="IconButton" IsVisible="{Binding SideMenuExpanded}">Options</TextBlock>
