--- a/Finances_Avalonia/App.axaml
+++ b/Finances_Avalonia/App.axaml
@@ -1,6 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:Finances_Avalonia.Services"
+             xmlns:local="clr-namespace:Finances_Avalonia"
+             xmlns:v="using:Finances_Avalonia.Services"
              x:Class="Finances_Avalonia.App"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
@@ -14,7 +15,8 @@
     <Application.Resources>
         <ResourceDictionary x:Key="IconButtonKey">
 			<ResourceDictionary.MergedDictionaries>
-				<ResourceInclude Source="/Controls/IconButton.axaml" />
+				<MergeResourceInclude Source="Controls/CheckBox.axaml" />
+				<MergeResourceInclude Source="Controls/TestControl.axaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 		<SolidColorBrush x:Key="PrimaryForeground">#CFCFCF</SolidColorBrush>
@@ -42,6 +44,6 @@
         </LinearGradientBrush>
     </Application.Resources>
     <Application.DataTemplates>
-		<local:ViewLocator/>
+		<v:ViewLocator/>
     </Application.DataTemplates>
 </Application>
